// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for default badge 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80"
>
  Default Badge
</div>
`;

exports[`Badge Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for destructive badge 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground shadow hover:bg-destructive/80"
>
  Destructive Badge
</div>
`;

exports[`Badge Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for empty badge 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80"
/>
`;

exports[`Badge Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for outline badge 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
>
  Outline Badge
</div>
`;

exports[`Badge Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for secondary badge 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
>
  Secondary Badge
</div>
`;
